<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/iv_employee_avatar"
                android:layout_width="@dimen/spacing_100"
                android:layout_height="@dimen/spacing_100"
                android:layout_marginTop="@dimen/spacing_10"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:srcCompat="@tools:sample/avatars" />

            <ProgressBar
                android:id="@+id/progressbar_detail"
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.whiterabbit.employeedirectory.widgets.DoubleTextView
                android:id="@+id/tv_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/spacing_8"
                android:layout_marginStart="@dimen/spacing_8"
                android:layout_marginTop="@dimen/spacing_10"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/iv_employee_avatar"
                app:padding="@dimen/spacing_8"
                app:titleText="@string/name" />

            <com.whiterabbit.employeedirectory.widgets.DoubleTextView
                android:id="@+id/tv_user_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/spacing_8"
                android:layout_marginTop="@dimen/spacing_10"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/tv_name"
                app:layout_constraintTop_toBottomOf="@id/tv_name"
                app:padding="@dimen/spacing_8"
                app:titleText="@string/user_name" />

            <com.whiterabbit.employeedirectory.widgets.DoubleTextView
                android:id="@+id/tv_email_address"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/spacing_8"
                android:layout_marginTop="@dimen/spacing_10"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/tv_user_name"
                app:layout_constraintTop_toBottomOf="@id/tv_user_name"
                app:padding="@dimen/spacing_8"
                app:titleText="@string/email_address" />

            <com.whiterabbit.employeedirectory.widgets.DoubleTextView
                android:id="@+id/tv_address"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/spacing_8"
                android:layout_marginTop="@dimen/spacing_10"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/tv_email_address"
                app:layout_constraintTop_toBottomOf="@id/tv_email_address"
                app:padding="@dimen/spacing_8"
                app:titleText="@string/address" />

            <com.whiterabbit.employeedirectory.widgets.DoubleTextView
                android:id="@+id/tv_phone"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/spacing_8"
                android:layout_marginTop="@dimen/spacing_10"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/tv_address"
                app:layout_constraintTop_toBottomOf="@id/tv_address"
                app:padding="@dimen/spacing_8"
                app:titleText="@string/phone" />


            <com.whiterabbit.employeedirectory.widgets.DoubleTextView
                android:id="@+id/tv_website"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/spacing_8"
                android:layout_marginTop="@dimen/spacing_10"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/tv_phone"
                app:layout_constraintTop_toBottomOf="@id/tv_phone"
                app:padding="@dimen/spacing_8"
                app:titleText="@string/website" />

            <com.whiterabbit.employeedirectory.widgets.DoubleTextView
                android:id="@+id/tv_company_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/spacing_8"
                android:layout_marginTop="@dimen/spacing_10"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/tv_website"
                app:layout_constraintTop_toBottomOf="@id/tv_website"
                app:padding="@dimen/spacing_8"
                app:titleText="@string/company_name" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>